# IncidentManagement

./: .codacy.yml  .gitignore  .jshintrc  .lighthouserc.json  PHASE_1_COMPLETION.md  PHASE_2_3_COMPLETION.md  README.md  REPO_HYGIENE.md  ROADMAP_PHASE2.md  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.ts  vitest.config.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: error.rs  lib.rs  main.rs  security_tests.rs
src-tauri/src/ai/: client.rs  dedup.rs  mod.rs  postmortem.rs  prompts.rs  root_cause.rs  similar.rs  stakeholder.rs  summarize.rs  trends.rs
src-tauri/src/commands/: ai.rs  attachments.rs  audit.rs  backup.rs  checklists.rs  custom_fields.rs  enrichments.rs  enrichments_accept.rs  enrichments_run.rs  export.rs  import.rs  incidents.rs  metrics.rs  mod.rs  pir_review.rs  postmortems.rs  provenance.rs  quarter_finalization.rs  quarter_review.rs  reports.rs  roles.rs  saved_filters.rs  service_aliases.rs  services.rs  settings.rs  shift_handoffs.rs  sla.rs  stakeholder_updates.rs  temp_files.rs  timeline_events.rs
src-tauri/src/db/: migrations.rs  mod.rs
src-tauri/src/db/queries/: audit.rs  checklists.rs  custom_fields.rs  dashboard.rs  enrichment_jobs.rs  incident_enrichments.rs  incidents.rs  metrics.rs  mod.rs  postmortems.rs  provenance.rs  quarter_finalization.rs  report_history.rs  roles.rs  saved_filters.rs  service_aliases.rs  service_dependencies.rs  services.rs  settings.rs  shift_handoffs.rs  sla.rs  stakeholder_updates.rs  tags.rs  timeline_events.rs
src-tauri/src/import/: column_mapper.rs  csv_parser.rs  mod.rs
src-tauri/src/models/: audit.rs  checklist.rs  custom_field.rs  incident.rs  metrics.rs  mod.rs  postmortem.rs  priority.rs  quarter.rs  report_history.rs  role.rs  saved_filter.rs  service.rs  shift_handoff.rs  sla.rs  stakeholder_update.rs
src-tauri/src/reports/: charts.rs  markdown.rs  mod.rs  pdf.rs
src-tauri/tests/: e2e_csv_import.rs  e2e_dashboard_metrics.rs  e2e_incident_creation.rs  e2e_report_generation.rs  integration_helpers.rs
(+173 files in other folders)
