[package]
name = "incident-management"
version = "0.1.0"
description = "Incident Management Desktop App"
authors = ["d"]
edition = "2021"

[lib]
name = "incident_management_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
anyhow = "1"
csv = "1"
docx-rs = "0.4"
base64 = "0.22"
pulldown-cmark = "0.12"
genpdf = "0.2"
sha2 = "0.10"
# Limit SQLx to SQLite only; avoids pulling in unused DB drivers (and their advisory surface).
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite", "macros"] }
tokio = { version = "1", features = ["full"] }
ollama-rs = { version = "0.3", features = ["stream"] }
reqwest = { version = "0.12", features = ["json"] }
tempfile = "3"

[dev-dependencies]

[features]
seed = []
